--- a/hackathon-core/pom.xml
+++ b/hackathon-core/pom.xml
@@ -28,6 +28,11 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${org.apache.poi.version}</version>
+        </dependency>
 
         <!-- app dependencies -->
         <dependency>
