--- a/hackathon-app/src/main/resources/hackathon.properties
+++ b/hackathon-app/src/main/resources/hackathon.properties
@@ -2,3 +2,5 @@ db.driver.class.name = org.postgresql.Driver
 db.url = jdbc:postgresql://localhost:5432/postgres
 db.username = hackathon_test
 db.password = hackathon_test
+
+yandex.token = 46af95db-2e0f-4e28-b989-cadb0c67f60c
