--- a/hackathon-core/pom.xml
+++ b/hackathon-core/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>${org.apache.poi.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.12</version>
+        </dependency>
 
         <!-- app dependencies -->
         <dependency>
